Skip to content

Qt on MacOS: segmentation fault at exit after playback

2024-12-17 17:01:45.827661+0100 vlc-osx-static[8709:2014015] [miscellany] CLIENT ERROR: TUINSRemoteViewController does not override -viewServiceDidTerminateWithError: and thus cannot react to catastrophic errors beyond logging them
[00006000031d0e60] main window error: window closed
Process 8709 stopped
* thread #1, name = 'vlc-qt', queue = 'com.apple.main-thread', stop reason = EXC_BAD_ACCESS (code=1, address=0xca8a745e0a00)
    frame #0: 0x000000010382fa2c libqt_plugin.dylib`windowDestroyCb(p_wnd=<unavailable>) at compositor.cpp:141:11 [opt]
   138 	{
   139 	   assert(p_wnd->sys);
   140 	   auto that = static_cast<vlc::CompositorVideo*>(p_wnd->sys);
-> 141 	   that->windowDestroy();
   142 	}
   143 	
   144 	static void windowSetStateCb(vlc_window_t* p_wnd, unsigned state)
Target 0: (vlc-osx-static) stopped.
warning: libqt_plugin.dylib was compiled with optimization - stepping may behave oddly; variables may not be available.
(lldb) p that
(vlc::CompositorVideo *) 0x00006000032e0990
(lldb) thread backtrace all
* thread #1, name = 'vlc-qt', queue = 'com.apple.main-thread', stop reason = EXC_BAD_ACCESS (code=1, address=0xca8a745e0a00)
  * frame #0: 0x000000010382fa2c libqt_plugin.dylib`windowDestroyCb(p_wnd=<unavailable>) at compositor.cpp:141:11 [opt]
    frame #1: 0x00000001006a9ba0 libvlccore.dylib`vlc_window_Delete(window=0x00006000031d0e60) at window.c:175:9 [opt]
    frame #2: 0x00000001006a8fd0 libvlccore.dylib`vout_display_window_Delete(window=<unavailable>) at video_window.c:437:5 [opt]
    frame #3: 0x000000010069fe28 libvlccore.dylib`vout_Release(vout=0x000000011b398f90) at video_output.c:2116:5 [opt]
    frame #4: 0x000000010069fdb0 libvlccore.dylib`vout_Close(vout=<unavailable>) at video_output.c:2093:5 [opt] [artificial]
    frame #5: 0x000000010068ff30 libvlccore.dylib`input_resource_Release at resource.c:159:9 [opt]
    frame #6: 0x000000010068fecc libvlccore.dylib`input_resource_Release(p_resource=0x0000600002ef4200) at resource.c:334:5 [opt]
    frame #7: 0x0000000100688810 libvlccore.dylib`vlc_player_Delete(player=0x000000012ce098a0) at player.c:1896:5 [opt]
    frame #8: 0x000000010065fb34 libvlccore.dylib`vlc_playlist_PlayerDestroy(playlist=<unavailable>) at player.c:169:5 [opt] [artificial]
    frame #9: 0x000000010065ffd8 libvlccore.dylib`vlc_playlist_Delete(playlist=0x00006000037c8000) at playlist.c:90:5 [opt]
    frame #10: 0x0000000100643b68 libvlccore.dylib`libvlc_InternalCleanup(p_libvlc=0x00006000032c2640) at libvlc.c:367:9 [opt]
    frame #11: 0x00000001004963d4 libvlc.dylib`libvlc_release(p_instance=0x0000600002ec4880) at core.c:114:9 [opt]
    frame #12: 0x00000001000030cc vlc-osx-static`main(i_argc=4, ppsz_argv=0x000000016fdff110) at darwinvlc.m:326:9 [opt]
    frame #13: 0x00000001831620e0 dyld`start + 2360
  thread #2
    frame #0: 0x00000001834abea4 libsystem_kernel.dylib`__workq_kernreturn + 8
  thread #7, name = 'caulk.messenger.shared:17'
    frame #0: 0x00000001834aa170 libsystem_kernel.dylib`semaphore_wait_trap + 8
    frame #1: 0x000000018da63624 caulk`caulk::semaphore::timed_wait(double) + 212
    frame #2: 0x000000018da634d8 caulk`caulk::concurrent::details::worker_thread::run() + 36
    frame #3: 0x000000018da631d8 caulk`void* caulk::thread_proxy<std::__1::tuple<caulk::thread::attributes, void (caulk::concurrent::details::worker_thread::*)(), std::__1::tuple<caulk::concurrent::details::worker_thread*>>>(void*) + 96
    frame #4: 0x00000001834eaf94 libsystem_pthread.dylib`_pthread_start + 136
  thread #8, name = 'caulk.messenger.shared:high'
    frame #0: 0x00000001834aa170 libsystem_kernel.dylib`semaphore_wait_trap + 8
    frame #1: 0x000000018da63624 caulk`caulk::semaphore::timed_wait(double) + 212
    frame #2: 0x000000018da634d8 caulk`caulk::concurrent::details::worker_thread::run() + 36
    frame #3: 0x000000018da631d8 caulk`void* caulk::thread_proxy<std::__1::tuple<caulk::thread::attributes, void (caulk::concurrent::details::worker_thread::*)(), std::__1::tuple<caulk::concurrent::details::worker_thread*>>>(void*) + 96
    frame #4: 0x00000001834eaf94 libsystem_pthread.dylib`_pthread_start + 136
  thread #14
    frame #0: 0x00000001834abea4 libsystem_kernel.dylib`__workq_kernreturn + 8
  thread #15
    frame #0: 0x00000001834abea4 libsystem_kernel.dylib`__workq_kernreturn + 8
  thread #16
    frame #0: 0x00000001834abea4 libsystem_kernel.dylib`__workq_kernreturn + 8
  thread #21, name = 'com.apple.NSEventThread'
    frame #0: 0x00000001834aa1f4 libsystem_kernel.dylib`mach_msg2_trap + 8
    frame #1: 0x00000001834bcb24 libsystem_kernel.dylib`mach_msg2_internal + 80
    frame #2: 0x00000001834b2e34 libsystem_kernel.dylib`mach_msg_overwrite + 476
    frame #3: 0x00000001834aa578 libsystem_kernel.dylib`mach_msg + 24
    frame #4: 0x00000001835ca680 CoreFoundation`__CFRunLoopServiceMachPort + 160
    frame #5: 0x00000001835c8f44 CoreFoundation`__CFRunLoopRun + 1208
    frame #6: 0x00000001835c8434 CoreFoundation`CFRunLoopRunSpecific + 608
    frame #7: 0x0000000186f52188 AppKit`_NSEventThread + 144
    frame #8: 0x00000001834eaf94 libsystem_pthread.dylib`_pthread_start + 136
  thread #27, name = 'com.apple.coremedia.sharedRootQueue.47'
    frame #0: 0x00000001834aa188 libsystem_kernel.dylib`semaphore_timedwait_trap + 8
    frame #1: 0x000000018333aa00 libdispatch.dylib`_dispatch_sema4_timedwait + 64
    frame #2: 0x000000018333affc libdispatch.dylib`_dispatch_semaphore_wait_slow + 76
    frame #3: 0x000000018334bc7c libdispatch.dylib`_dispatch_worker_thread + 328
    frame #4: 0x00000001834eaf94 libsystem_pthread.dylib`_pthread_start + 136
  thread #30
    frame #0: 0x00000001834abea4 libsystem_kernel.dylib`__workq_kernreturn + 8
  thread #31
    frame #0: 0x0000000000000000

Commit eaa118fe

Edited by Alexandre Janniaux
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information